- update leaflet version - update leaflet active area version - create basemap dropdown integration with Leaflet - replace references to OpenLayers coordinate pair objects with Leaflet objects - disable geocoder temporarily (replacing Google geocoder)

--- a/geoportal/src/main/webapp/WEB-INF/ogp_config.json
+++ b/geoportal/src/main/webapp/WEB-INF/ogp_config.json
@@ -154,11 +154,21 @@
             "nodeType": "ogp2",
             "url": "https://geo.library.arizona.edu",
             "selected": true
+        },
+        {
+            "id": "gmu",
+            "shortName": "GMU",
+            "fullName": "George Mason University",
+            "iconClass": "uarizonaIcon",
+            "nodeType": "ogp2",
+            "url": "https://geo.library.arizona.edu",
+            "selected": true
         }
     ],
     "basemaps": [
         {
             "displayName": "OpenStreetMap",
+            "type": "tilelayer",
             "url": "https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png",
             "maxZoom": 19,
             "attribution": "&copy; <a href=\"http://www.openstreetmap.org/copyright\">OpenStreetMap</a>",
@@ -166,6 +176,7 @@
         },
         {
             "displayName": "World Imagery - Esri",
+            "type": "tilelayer",
             "attribution": "Tiles &copy; Esri &mdash; Source: Esri, i-cubed, USDA, USGS, AEX, GeoEye, Getmapping, Aerogrid, IGN, IGP, UPR-EGP, and the GIS User Community",
             "url": "https://server.arcgisonline.com/ArcGIS/rest/services/World_Imagery/MapServer/tile/{z}/{y}/{x}"
         }
