- fixed css issue introduced by jquery-ui 12.1 (dialog close button) - simplified and improved behavior of custom events, mostly on application init

--- a/geoportal/src/main/webapp/WEB-INF/ogp.properties
+++ b/geoportal/src/main/webapp/WEB-INF/ogp.properties
@@ -33,7 +33,8 @@ apikey.google=
 # By default, this value will point to the OGP community production solr instance
 # .external needs to be a web accessible url
 # note: currently ogp will use only /select and /terms
-solr.url.internal=http://data.opengeoportal.org/solr/ogp
+solr.url.internal=https://geodata.tufts.edu/solr
+#solr.url.internal=http://data.opengeoportal.org/solr/ogp
 
 # this value is ignored if 'solr.proxy.enabled' is set to 'true'. Should prefer solr.proxy.enabled.
 # solr.url.external=http://data.opengeoportal.org/solr/ogp
