WIP - work towards saving application state between page loads.

--- a/geoportal/src/main/webapp/WEB-INF/ogp_config.json
+++ b/geoportal/src/main/webapp/WEB-INF/ogp_config.json
@@ -168,6 +168,7 @@
     "basemaps": [
         {
             "displayName": "OpenStreetMap",
+            "basemapId": "osm",
             "type": "tilelayer",
             "url": "https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png",
             "maxZoom": 19,
@@ -176,6 +177,7 @@
         },
         {
             "displayName": "World Imagery - Esri",
+            "basemapId": "esri_imagery",
             "type": "tilelayer",
             "attribution": "Tiles &copy; Esri &mdash; Source: Esri, i-cubed, USDA, USGS, AEX, GeoEye, Getmapping, Aerogrid, IGN, IGP, UPR-EGP, and the GIS User Community",
             "url": "https://server.arcgisonline.com/ArcGIS/rest/services/World_Imagery/MapServer/tile/{z}/{y}/{x}"
