--- a/geoportal/pom.xml
+++ b/geoportal/pom.xml
@@ -31,6 +31,7 @@
 		<geotools.version>26.0</geotools.version>
 		<jackson.version>2.12.5</jackson.version>
 		<httpcomponents.version>4.5.13</httpcomponents.version>
+		<validator.version>1.7</validator.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<wro4j.version>1.10.1</wro4j.version>
@@ -117,6 +118,12 @@
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
 			<version>3.12.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>commons-validator</groupId>
+			<artifactId>commons-validator</artifactId>
+			<version>${validator.version}</version>
 		</dependency>
 
 		<dependency>
