--- a/geoportal/pom.xml
+++ b/geoportal/pom.xml
@@ -58,10 +58,10 @@
 			<artifactId>spring-boot-starter-cache</artifactId>
 		</dependency>
 
-		<dependency>
+<!--		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
-		</dependency>
+		</dependency>-->
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -101,7 +101,7 @@
 		<dependency>
 			<groupId>eu.michael-simons</groupId>
 			<artifactId>wro4j-spring-boot-starter</artifactId>
-			<version>0.9.2</version>
+			<version>0.10.1</version>
 		</dependency>
 
 
