--- a/geoportal/pom.xml
+++ b/geoportal/pom.xml
@@ -8,7 +8,7 @@
 -->
 	<version>2.1-SNAPSHOT</version>
 	<name>opengeoportal webapp</name>
-	<url>http://opengeoportal.org</url>
+	<url>https://opengeoportal.org</url>
 
 	<repositories>
 		<repository>
@@ -23,12 +23,12 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.6.1</version>
+		<version>2.6.3</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 
 	<properties>
-		<geotools.version>26.0</geotools.version>
+		<geotools.version>26.1</geotools.version>
 		<validator.version>1.7</validator.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -108,7 +108,7 @@
 		<dependency>
 			<groupId>org.apache.solr</groupId>
 			<artifactId>solr-solrj</artifactId>
-			<version>8.11.0</version>
+			<version>8.11.1</version>
 		</dependency>
 
 		<dependency>
@@ -177,7 +177,7 @@
 		<dependency>
 			<groupId>com.sun.xml.bind</groupId>
 			<artifactId>jaxb-impl</artifactId>
-			<version>2.3.3</version>
+			<version>2.3.5</version>
 		</dependency>
 
 
@@ -187,13 +187,6 @@
 			<groupId>org.jsoup</groupId>
 			<artifactId>jsoup</artifactId>
 			<version>1.14.3</version>
-		</dependency>
-
-		<dependency>
-			<groupId>org.seleniumhq.selenium</groupId>
-			<artifactId>selenium-java</artifactId>
-			<version>4.0.0</version>
-			<scope>test</scope>
 		</dependency>
 
 	</dependencies>
@@ -220,25 +213,6 @@
 					</execution>
 				</executions>
 			</plugin>
-	<!--		<plugin>
-				<groupId>ro.isdc.wro4j</groupId>
-				<artifactId>wro4j-maven-plugin</artifactId>
-				<executions>
-					<execution>
-						<phase>compile</phase>
-						<goals>
-							<goal>run</goal>
-						</goals>
-					</execution>
-				</executions>
-				<configuration>
-					<targetGroups>ogp,ogpLib</targetGroups>
-					<minimize>true</minimize>
-					<cssDestinationFolder>${basedir}/target/${warFile.name}/resources/css/</cssDestinationFolder>
-					<jsDestinationFolder>${basedir}/target/${warFile.name}/resources/javascript/</jsDestinationFolder>
-					<wroManagerFactory>ro.isdc.wro.extensions.manager.standalone.GoogleStandaloneManagerFactory</wroManagerFactory>
-				</configuration>
-			</plugin>-->
 		</plugins>
 	</build>
 </project>
