WIP: not ready to run added support for new schema version

--- a/geoportal/src/main/resources/application-dev.properties
+++ b/geoportal/src/main/resources/application-dev.properties
@@ -41,8 +41,10 @@ ogp.defaultBasemap=osm
 # .external needs to be a web accessible url
 # note: currently ogp will use only /select and /terms
 
+# either OGPv2 or OGPv3. v2 is the classic OGP schema. v3 changes Originator, Publisher, ThemeKeywords, and PlaceKeywords to mulitvalues.
+search.schema=OGPv2
 search.url=https://localhost:8983
-search.repositories=tufts,harvard,mit,massgis
+search.repositories=tufts,harvard,stanford,massgis
 search.repositoriesSelected=all
 search.basic.showRestricted=${ogp.localRepository}
 search.basic.fields=LayerDisplayNameSynonyms^0.2,ThemeKeywordsSynonymsLcsh^0.1,PlaceKeywordsSynonyms^0.1,Publisher^0.1,Originator^0.1,ThemeKeywordsSynonymsIso^0.1
