WIP: not ready to run rearranged static files so that unprocessed css and javascript is not directly available updated repositories.properties added repository icons

--- a/geoportal/src/main/resources/repositories.properties
+++ b/geoportal/src/main/resources/repositories.properties
@@ -12,14 +12,18 @@ tufts.url=http://geodata.tufts.edu
 harvard.shortName=Harvard
 harvard.fullName=Harvard Geospatial Library
 harvard.sourceIconClass=harvardIcon
-harvard.nodeType=ogp1
+harvard.nodeType=gbl
 harvard.url=http://calvert.hul.harvard.edu:8080/opengeoportal
 
 berkeley.shortName=Berkeley
 berkeley.fullName=UC Berkeley
 berkeley.sourceIconClass=berkeleyIcon
-berkeley.nodeType=ogp1
-berkeley.url=http://gis-gs.lib.berkeley.edu:8080
+berkeley.nodeType=gbl
+
+stanford.shortName=Stanford
+stanford.fullName=Stanford University
+stanford.sourceIconClass=stanfordIcon
+stanford.nodeType=gbl
 
 mit.shortName=MIT
 mit.fullName=Massachusetts Institute of Technology
