WIP: not ready to run added moved javascript and css

--- a/geoportal/src/main/resources/application-dev.properties
+++ b/geoportal/src/main/resources/application-dev.properties
@@ -11,6 +11,7 @@ wro4j.filterUrl = /resources
 wro4j.debug = true
 
 #server.servlet.session.cookie.secure=true
+server.servlet.session.cookie.name=OGP_SESSION
 
 # localhost is just a placeholder; you need to put in the actual domain
 # The domain of your ogp site.  This value is used for CORS and other
@@ -22,9 +23,6 @@ wro4j.debug = true
 # default is OpenGeoportal
 # primary is the main text color (default black) and offset will have the css class offsetColor
 
-ogp.domain=http://localhost:8080
-ogp.cssLocalized=
-ogp.jsLocalized=
 ogp.pageTitle.primary=Open
 ogp.pageTitle.offset=Geoportal
 ogp.localRepository=tufts
