bugfix: application/x-compressed-zip mime-type not recognized as zip file version updated in POM

--- a/geoportal/src/main/resources/application-dev.properties
+++ b/geoportal/src/main/resources/application-dev.properties
@@ -4,13 +4,20 @@ debug=true
 logging.level.root=INFO
 logging.level.org.opengeoportal=DEBUG
 
+logging.file.name=opengeoportal.log
+
 #spring.mvc.static-path-pattern=/static/**
 wro4j.managerFactory.preProcessors=cssUrlRewriting
 wro4j.managerFactory.postProcessors=jsMin
 wro4j.filterUrl = /resources
 wro4j.debug = true
 
-#server.servlet.session.cookie.secure=true
+spring.main.banner-mode=off
+
+# should be true in production
+server.servlet.session.cookie.secure=false
+# should be STRICT in production
+server.servlet.session.cookie.same-site=LAX
 server.servlet.session.cookie.name=OGP_SESSION
 
 # localhost is just a placeholder; you need to put in the actual domain
@@ -99,7 +106,6 @@ proxy.geoserver.internal=
 proxy.geoserver.external=restricted
 proxy.geoserver.username=
 proxy.geoserver.password=
-
 
 minPoolSize=6
 maxPoolSize=12
