--- a/geoportal/pom.xml
+++ b/geoportal/pom.xml
@@ -6,7 +6,7 @@
 <!--
 	<packaging>war</packaging>
 -->
-	<version>2.1-SNAPSHOT</version>
+	<version>3.0-RC</version>
 	<name>opengeoportal webapp</name>
 	<url>https://opengeoportal.org</url>
 
