bugfix: application/x-compressed-zip mime-type not recognized as zip file version updated in POM

--- a/geoportal/src/main/resources/application-dev.properties
+++ b/geoportal/src/main/resources/application-dev.properties
@@ -29,7 +29,7 @@ server.servlet.session.cookie.name=OGP_SESSION
 
 # default is OpenGeoportal
 # primary is the main text color (default black) and offset will have the css class offsetColor
-
+ogp.domain=localhost:8080
 ogp.pageTitle.primary=Open
 ogp.pageTitle.offset=Geoportal
 ogp.localRepository=tufts
@@ -47,8 +47,8 @@ ogp.defaultBasemap=osm
 # note: currently ogp will use only /select and /terms
 
 # either OGPv2 or OGPv3. v2 is the classic OGP schema. v3 changes Originator, Publisher, ThemeKeywords, and PlaceKeywords to mulitvalues.
-search.schema=OGPv2
-search.url=https://localhost:8983
+search.schema=OGPv3
+search.url=http://gis-prod-02.it.tufts.edu:8983/solr/ogp
 search.repositories=tufts,harvard,stanford,massgis
 search.repositoriesSelected=all
 search.basic.showRestricted=${ogp.localRepository}
